--- a/summary.html
+++ b/summary.html
@@ -29,7 +29,7 @@
                         <div class="summaryRow">
                             <button class="summaryCard summaryCard--wide" data-nav="todo">
                                 <div class="summaryIconCircle">
-                                    <img src="./assets/icons/edit.svg" alt="" />
+                                    <img src="./assets/icons/pen.svg" alt="summary_pen" />
                                 </div>
                                 <div class="summaryCardText">
                                     <div class="summaryNumber" id="sum-todo">0</div>
@@ -39,7 +39,7 @@
 
                             <button class="summaryCard summaryCard--wide" data-nav="done">
                                 <div class="summaryIconCircle">
-                                    <img src="./assets/icons/check.svg" alt="" />
+                                    <img src="./assets/icons/check.svg" alt="summary_check" />
                                 </div>
                                 <div class="summaryCardText">
                                     <div class="summaryNumber" id="sum-done">0</div>
@@ -53,7 +53,7 @@
                             <div class="urgentLeft">
                                 <div class="urgentBlock">
                                     <div class="urgentCircle">
-                                        <img src="./assets/icons/priority-urgent-white.svg" alt="" />
+                                        <img src="./assets/icons/urgent.svg" alt="summary_urgent" />
                                     </div>
                                     <div class="urgentText">
                                         <div class="summaryNumber" id="sum-urgent">0</div>
