--- a/add_task.html
+++ b/add_task.html
@@ -11,10 +11,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
     <link rel="stylesheet" href="style/add-Task.css" />
-    <script src="./JS/addTask.js"></script>
-    <script src="./assets/templates/AddTaskTemplate.js"></script>
+    <script src="./assets/templates/AddTaskTemplate.js" defer></script>
+    <script src="./JS/addTask.js" defer></script>
+    <script src="./JS/sidebar.js"></script>
+    <script src="./JS/header.js"></script>
+    <script src="./JS/boardTamplate.js"></script>
+    <script src="./JS/taskDetail.js"></script>
+    <script src="./JS/board.js"></script>
+    <link rel="stylesheet" href="./style/sidebar.css" />
+    <link rel="stylesheet" href="./style/header.css" />
+    <link rel="stylesheet" href="style/standard.css" />
   </head>
   <body onload="init()">
+    <div id="sidebar-slot"></div>
+    <div id="header-slot"></div>
     <main>
       <div id="mainContent"></div>
     </main>
