--- a/board.html
+++ b/board.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Board</title>
+    <link rel="icon" href="./assets/icons/favicon.svg" type="image/svg+xml">
     <link rel="stylesheet" href="./style/standard.css" />
     <link rel="stylesheet" href="./style/sidebar.css" />
     <link rel="stylesheet" href="./style/header.css" />
