board design chanched: distances

--- a/board.html
+++ b/board.html
@@ -22,7 +22,7 @@
             <div id="app-canvas" class="canvas-area">
                 <section class="addTaskContainer">
                     <h1>Board</h1>
-                    <div class="addTaskContainer gap32px">
+                    <div class =" displayFLEX gap32px">
                         <div class="searchBar">
                             <input id="searchInput" onkeyup="searchTask()" name="Search" placeholder="Find Task"
                                 rows="1"></input>
