--- a/index.html
+++ b/index.html
@@ -1,22 +1,69 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Join</title>
-    <link rel="icon" href="./assets/icons/favicon.svg" type="image/svg+xml">
+    <link rel="icon" href="./assets/icons/favicon.svg" type="image/svg+xml" />
     <link rel="stylesheet" href="./style/standard.css" />
     <link rel="stylesheet" href="./style/login.css" />
   </head>
   <body>
-    <div id="content" class="contentWrapper"></div>
+    <div id="content" class="contentWrapper">
+      <div id="logoAnimation" class="logoAnimation skipAnimation">
+        <img src="/assets/icons/logo-login-start.svg" alt="logo" />
+      </div>
+
+      <nav class="loginNav">
+        <div class="loginNewUserWrapper">
+          <span>Not a Join user?</span>
+          <a href="signup.html" class="ButtonBlueFilled" style="text-decoration: none">Sign up</a>
+        </div>
+      </nav>
+
+      <main class="loginMainContainer">
+        <div class="loginCard">
+          <h1>Log in</h1>
+          <div class="Separator"></div>
+          <form novalidate>
+            <div class="loginInputs">
+              <div class="InputWrapper">
+                <label for="loginEmail" class="visuallyhidden">Email</label>
+                <input
+                  id="loginEmail"
+                  class="InputField"
+                  autocomplete="username"
+                  type="email"
+                  placeholder="Email" />
+                <img class="InputFieldIcon" src="./assets/img/mail.svg" alt="Email Icon" />
+              </div>
+              <div class="InputWrapper">
+                <label for="loginPassword" class="visuallyhidden">Password</label>
+                <input
+                  id="loginPassword"
+                  class="InputField"
+                  autocomplete="current-password"
+                  type="password"
+                  placeholder="Password" />
+                <img class="InputFieldIcon" src="./assets/img/lock.svg" alt="Password Icon" />
+              </div>
+              <span id="loginError" class="InputErrorText"></span>
+              <div class="loginButtonsWrapper">
+                <button class="ButtonBlueFilled" type="submit" id="loginButton">Log in</button>
+                <button class="ButtonWhiteBlueOutline" type="button" id="guestButton">
+                  Guest Log in
+                </button>
+              </div>
+            </div>
+          </form>
+        </div>
+      </main>
+    </div>
     <footer class="loginFooter">
       <a class="loginFooterLink" href="privacy.html">Privacy Policy</a>
       <a class="loginFooterLink" href="legal_notice.html">Legal notice</a>
     </footer>
     <script src="script.js"></script>
-    <script src="./JS/loginHtml.js"></script>
     <script src="./JS/login.js"></script>
-   
   </body>
 </html>
