task shadow and border chanched, file names chanched

--- a/add_task.html
+++ b/add_task.html
@@ -15,7 +15,7 @@
     <script src="./JS/addTask.js" defer></script>
     <script src="./JS/sidebar.js"></script>
     <script src="./JS/header.js"></script>
-    <script src="./JS/boardTamplate.js"></script>
+    <script src="./JS/taskDetailsandBoardTemplate.js"></script>
     <script src="./JS/taskDetail.js"></script>
     <script src="./JS/board.js"></script>
     <link rel="stylesheet" href="./style/sidebar.css" />
