--- a/board.html
+++ b/board.html
@@ -59,7 +59,7 @@
     
     <script src="./JS/sidebar.js"></script>
     <script src="./JS/header.js"></script>
-    <script src="./JS/boardTamplate.js"></script>
+    <script src="./JS/taskDetailsandBoardTemplate.js"></script>
     <script src="./JS/taskDetail.js"></script>
     <script src="./JS/board.js"></script>
     
